<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="delete">DEL</string>
    <string name="equal">=</string>
    <string name="mod">%</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="log">Log</string>
    <string name="ln">Ln</string>
    <string name="sqrt">Sqrt</string>
    <string name="square">x^2</string>
    <string name="power">x^n</string>
    <string name="hide">▲</string>
    <string name="author">Developed by Avinash Kumar Singh</string>
</resources>
